@@ -57,6 +57,7 @@ void init_ob_types(ob_methods *base_type) {
     init_type_altar();
     init_type_armour_improver();
     init_type_arrow();
+    init_type_blindness();
     init_type_book();
     init_type_button();
     init_type_cf_handle();
